--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <!--<embed src="./קוח + תיק עבודות - הדר שגיא.pdf" type="application/pdf" class="pdf"/>-->
         <div class="controls">
             <div class="background">
-                <a href="/Graphic Designer Hadar Sagi Protfolio.pdf" download>
+                <a href="./Graphic Designer Hadar Sagi Protfolio.pdf" download>
                     <svg 
                     xmlns="http://www.w3.org/2000/svg"
                     id="Isolation_Mode"
